--- a/veebipood/package.json
+++ b/veebipood/package.json
@@ -10,9 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
+    "bootstrap": "^5.3.7",
+    "firebase": "^11.9.1",
+    "i18next": "^25.2.1",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.6.0"
+    "react-i18next": "^15.5.3",
+    "react-router-dom": "^7.6.0",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
